# FP8fpu

./: .gitignore  Makefile  README.md  datagenerater.py  fp8_utils  image.drawio  setting.gtkw
.bloop/: fpu.json  fpu.test.json
.metals/: metals.lock.db  settings.json
.metals/.reports/bloop/2025-03-21/: r_aNobias: 50_13-37-36-395.md  r_bNobias: 50_13-37-36-416.md
.metals/.reports/bloop/2025-03-24/: r_aNobias: 26_10-38-40-282.md  r_bNobias: 26_10-38-40-291.md
.metals/.reports/metals-full/2025-03-20/: r_compiler-error_(fpu)_15-53-45-891.md  r_compiler-error_(fpu)_16-43-39-648.md  r_compiler-error_(fpu)_16-43-48-856.md  r_empty-definition_(fpu)_09-50-12-369.md  r_empty-definition_(fpu)_15-21-52-596.md  r_empty-definition_(fpu)_15-21-52-733.md  r_empty-definition_(fpu)_15-21-52-869.md  r_empty-definition_(fpu)_15-30-53-197.md  r_empty-definition_(fpu)_15-39-01-494.md  r_empty-definition_(fpu)_17-14-42-540.md  r_empty-definition_(fpu.test)_15-24-51-690.md  r_empty-definition_09-42-54-973.md  r_empty-definition_09-44-29-612.md  r_empty-definition_09-45-34-046.md  r_empty-definition_09-45-38-478.md  r_empty-definition_09-48-16-250.md  r_empty-definition_09-48-17-660.md  r_empty-definition_09-48-19-487.md
.metals/.reports/metals-full/2025-03-21/: r_empty-definition_(fpu)_19-57-44-699.md  r_empty-definition_(fpu)_19-57-45-056.md  r_empty-definition_(fpu)_21-46-06-603.md  (+5 more)
src/main/resources/: Fpu.sv  Top.sv
src/test/csrc/: testacc.cpp
src/test/difftest/: CMakeLists.txt  fp8_dot_product  fp8_dot_product.cu  fp8_dot_product.py
src/test/testOnTorch/: testOnTorch.ipynb
(+31 files in other folders)
